--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -1,44 +1,30 @@
-/* Define CSS variables for easy theme management */
-:root {
-    --primary-background: #222222;
-    --secondary-background: #f2f2f2;
-    --primary-color: #f2f2f2;
-    --secondary-text-color: #666;
-    --primary-accent-color: #850f34; /* Crimson's brand color */
-    --link-hover-opacity: 0.85;
-    --transition-speed: 0.3s;
-    --border-radius: 8px;
-    --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    --font-family: "Inter", "Segoe UI", -apple-system, BlinkMacSystemFont, "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    --font-smoothing: antialiased;
-    --text-color: #333;
-    --separator-color: #ddd;
-    --container-max-width: 800px;
-    --panel-width: 600px;
-    --primary-margin: 20px;
-    --input-padding: 10px;
-    --settings-button-margin: 20px;
-    --header-logo-size: 40px;
-    --microsoft-logo-size: 23px;
-    --github-logo-size: 20px;
-}
-
-/* General Reset and Base Styles */
+/* Global styles */
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
 html,
 body {
     height: 100%;
-    background: var(--secondary-background);
-    font-family: var(--font-family);
-    color: var(--text-color);
-    -webkit-font-smoothing: var(--font-smoothing);
+    margin: 0;
+    padding: 0;
+    background: #f2f2f2;
+    font-family:
+        "Poppins",
+        "Segoe UI",
+        -apple-system,
+        BlinkMacSystemFont,
+        "Roboto",
+        "Oxygen",
+        "Ubuntu",
+        "Cantarell",
+        "Fira Sans",
+        "Droid Sans",
+        "Helvetica Neue",
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: #333; /* Ensuring text color is defined for readability */
 }
 
 #root {
