--- a/app/frontend/src/components/Example/Example.module.css
+++ b/app/frontend/src/components/Example/Example.module.css
@@ -23,19 +23,19 @@
     box-shadow:
         0px 8px 16px rgba(0, 0, 0, 0.14),
         0px 0px 2px rgba(0, 0, 0, 0.12);
-    outline: 2px solid rgba(115, 118, 225, 1);
+    outline: 2px solid rgb(220, 20, 60);
 }
 
 .exampleText {
     margin: 0;
-    font-size: 22px;
+    font-size: 20px;
     width: 280px;
     min-height: 100px;
 }
 
 @media only screen and (max-height: 780px) {
     .exampleText {
-        font-size: 20px;
+        font-size: 15px;
         height: 80px;
     }
 }
