--- a/app/frontend/src/pages/chat/Chat.module.css
+++ b/app/frontend/src/pages/chat/Chat.module.css
@@ -16,7 +16,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 0 24px; /* Added horizontal padding for consistency */
 }
 
 .chatEmptyState {
@@ -32,9 +31,8 @@
 .chatEmptyStateTitle {
     font-size: 4rem;
     font-weight: 600;
-    margin: 0;
+    margin-top: 0;
     margin-bottom: 30px;
-    color: #222; /* Darker color for better readability */
 }
 
 .chatEmptyStateSubtitle {
@@ -49,57 +47,57 @@
 
     .chatEmptyStateTitle {
         font-size: 3rem;
+        margin-bottom: 0px;
     }
 }
 
 .chatMessageStream {
     flex-grow: 1;
     max-height: 1024px;
+    max-width: 1028px;
     width: 100%;
     overflow-y: auto;
-    padding: 0 24px; /* Consistent padding */
+    padding-left: 24px;
+    padding-right: 24px;
     display: flex;
     flex-direction: column;
-    background: #fff; /* Light background for the message stream */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
-.chatMessageGpt,
-.chatMessageGptMinWidth {
+.chatMessageGpt {
     margin-bottom: 20px;
     max-width: 80%;
+    display: flex;
     min-width: 500px;
-    background: #f2f2f2; /* Slightly different background for message bubbles */
-    padding: 15px; /* Padding inside message bubbles */
-    border-radius: 8px; /* Rounded corners for message bubbles */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Consistent shadow */
+}
+
+.chatMessageGptMinWidth {
+    max-width: 500px;
+    margin-bottom: 20px;
 }
 
 .chatInput {
     position: sticky;
     bottom: 0;
     flex: 0 0 100px;
-    padding: 12px 24px;
+    padding-top: 12px;
+    padding-bottom: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
     width: 100%;
     max-width: 1028px;
     background: #f2f2f2;
-    border-top: 1px solid #ddd; /* Separator line */
 }
 
 .chatAnalysisPanel {
     flex: 1;
     overflow-y: auto;
     max-height: 89vh;
-    margin: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .chatSettingsSeparator {
     margin-top: 15px;
-    border-bottom: 1px solid #ddd;
 }
 
 .loadingLogo {
@@ -109,21 +107,9 @@
 .commandsContainer {
     display: flex;
     align-self: flex-end;
-    margin: 20px;
 }
 
 .commandButton {
     margin-right: 20px;
     margin-bottom: 20px;
-    background-color: #222;
-    color: #f2f2f2;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.commandButton:hover {
-    background-color: #333; /* Slightly darker on hover */
 }
